# ALib-Class-Library

./: .gitignore  README.md
docs/: FAQ.dox  makeclean.sh  makedox.bat  makedox.sh  readme.txt
docs/doxygen/: aworx_stylesheet.css  doxlayout.xml  doxyfile.cmake.ini  doxyfile.ini  footer.html  header.html
docs/pages/: Changelog.dox  Changelog.dox.md  Changelog.md  MainPage.dox  MainPage.dox.md  MainPage.md  NoteOnTheFileExtension.txt  Tools.dox  Tools.dox.md  Tools.md  alib_detailpages.dox.md  alib_detailpages.md  alib_manual.dox  alib_manual.dox.md  alib_manual.md  alib_mod_alox.dox  alib_mod_alox.dox.md  alib_mod_alox.md  alib_mod_alox_faq.dox  alib_mod_alox_faq.dox.md  alib_mod_alox_faq.md  alib_mod_alox_tutorial.dox  alib_mod_alox_tutorial.dox.md  alib_mod_alox_tutorial.md  alib_mod_assert.dox.md  alib_mod_assert.md  alib_mod_basecamp.dox  alib_mod_basecamp.md  alib_mod_bitbuffer.dox  alib_mod_bitbuffer.dox.md  alib_mod_bitbuffer.md  alib_mod_bootstrap.dox.md  alib_mod_bootstrap.md  alib_mod_boxing.dox  alib_mod_boxing.dox.md  alib_mod_boxing.md  alib_mod_camp.dox.md  alib_mod_camp.md  alib_mod_characters.dox  alib_mod_characters.dox.md  (+67 more)
docs/pages/resource-exports/: resources-1903.txt  resources-1912.txt  resources-2312.txt  resources-2402.txt  resources-2412.txt  resources-2510.txt  resources-2511.txt
docs/resources/: menu.js
src/: ALib.ALox.H  ALib.ALox.Impl.H  ALib.BitBuffer.H  ALib.Bootstrap.H  ALib.Boxing.H  ALib.Boxing.StdFunctors.H  ALib.CLI.H  ALib.Camp.Base.H  ALib.Camp.H  ALib.Characters.Functions.H  ALib.Compatibility.QTBoxing.H  ALib.Compatibility.QTCharacters.H  ALib.Compatibility.QTStrings.H  ALib.Compatibility.StdBoxtraits.H  ALib.Compatibility.StdStrings.H  ALib.Containers.FixedCapacityVector.H  ALib.Containers.HashTable.H  ALib.Containers.LRUCacheTable.H  ALib.Containers.List.H  ALib.Containers.SharedPtr.H  ALib.Containers.SharedVal.H  ALib.Containers.StringTree.H  ALib.Containers.StringTreeIterator.H  ALib.EnumOps.H  ALib.EnumRecords.Bootstrap.H  ALib.EnumRecords.H  ALib.Exceptions.H  ALib.Expressions.H  ALib.Expressions.Impl.H  ALib.Files.Expressions.H  ALib.Files.H  ALib.Files.TextFile.H  ALib.Format.FormatterJavaStyle.H  ALib.Format.FormatterPythonStyle.H  ALib.Format.H  ALib.Format.Paragraphs.H  ALib.Format.PropertyFormatter.H  ALib.Format.PropertyFormatters.H  ALib.Format.StdImplementation.H  ALib.Lang.CIFunctions.H  (+27 more)
src.samples/ALox/: sample.cpp
src.samples/Boxing/: sample.cpp
src.samples/CLI/: sample.cpp
src.samples/Singleton/: sample.cpp
src.samples/Strings/: sample.cpp
src.samples/Text/: sample.cpp
src.samples/unittests/: alib_test_selection.hpp  aworx_callerinfo_ut.hpp  aworx_unittests.cpp  aworx_unittests.hpp  aworx_unittests_end.hpp  gtest_main.cpp  ut_bitbuffer_arraycompressor.cpp  ut_bitbuffer_bitbuffer.cpp  ut_boxing.cpp  ut_compatiblity_qt.cpp  ut_compatiblity_std.cpp  ut_files.cpp  ut_lang.cpp  ut_resources.cpp  ut_system.cpp  ut_threadmodel.cpp  ut_threads.cpp  ut_time.cpp  ut_variables.cpp
src.samples/unittests/alox/: ut_alox_dox.cpp  ut_alox_log_domains.cpp  ut_alox_log_rel.cpp  ut_alox_log_scopes.cpp  ut_alox_log_scopes.hpp  ut_alox_log_scopes_helper.cpp  ut_alox_log_scopes_helper_sub2.cpp  ut_alox_logger.cpp  ut_alox_lox.cpp
src.samples/unittests/containers_monomem/: ut_hashtable.cpp  ut_list.cpp  ut_lrucache.cpp  ut_monomem.cpp  ut_monomem_instantiation.cpp  ut_stdcontainers.cpp  ut_stringtree.cpp
src.samples/unittests/docsamples/: DOX_ASTRING_APPEND.cpp  DOX_BOXING.cpp  DOX_CLI_TUTORIAL.cpp  DOX_ENUMS.cpp  DOX_EXPR_CALCULATOR.cpp  DOX_EXPR_TUTORIAL.cpp  DOX_FILES.cpp  DOX_FORMAT.cpp  DOX_SINGLETON.cpp  DOX_STRINGS.cpp  DOX_TOKENIZER.cpp  DOX_VARIABLES.cpp
src.samples/unittests/expressions/: ut_expr.cpp  ut_expr_builtin.cpp  ut_expr_testfunc.cpp  ut_expr_testfunc.hpp
src.samples/unittests/strings/: ut_strings.cpp  ut_strings_astring.cpp  ut_strings_custom.cpp  ut_strings_format.cpp  ut_strings_substring.cpp  ut_strings_util.cpp  ut_strings_util_token_consistency.cpp
src/alib/: alib.cpp  alib.hpp  alib.inl  alib_precompile.hpp  alox.hpp  assert.cpp  assert.inl  chk_nc.inl  distribution.hpp  mainargs.cpp  mainargs.inl  platformincludes.hpp
src/alib/alox/: alox.cpp  alox.hpp  alox.mpp  alox.prepro.hpp  alox_impl.mpp  alox_init.inl  alox_init.mpp  alox_predef.hpp  aloxcamp.cpp  aloxcamp.hpp  aloxcamp.inl  aloxinit.cpp  aloxmodule.cpp  aloxmodule.hpp  aloxtypesandenums.cpp  aloxtypesandenums.hpp  log.cpp  log.hpp  log.inl  logtools.cpp  logtools.hpp  logtools.inl  lox.cpp  lox.hpp  lox.inl  lox_getstate.cpp  macros.inl  reportwriter.cpp  reportwriter.hpp  variables.hpp
src/alib/bitbuffer/: arraycompressor.hpp  arraycompressor.inl  bitbuffer.cpp  bitbuffer.hpp  bitbuffer.inl  bitbuffer.mpp  bitbuffer.prepro.hpp
src/alib/bootstrap/: bootstrap.cpp  bootstrap.mpp  bootstrap.prepro.hpp
src/alib/cli/: cli.cpp  (+18 more)
src/unittests/: alib_test_selection.hpp  aworx_callerinfo_ut.hpp  aworx_unittests.cpp  aworx_unittests.hpp  aworx_unittests_end.hpp  gtest_main.cpp  ut_alib_bitbuffer_arraycompressor.cpp  ut_alib_bitbuffer_bitbuffer.cpp  ut_alib_boxing.cpp  ut_alib_compatiblity_qt.cpp  ut_alib_compatiblity_std.cpp  ut_alib_config.cpp  ut_alib_expr_basics.cpp  ut_alib_expr_specials.cpp  ut_alib_expr_testfunc.cpp  ut_alib_files.cpp  ut_alib_lib.cpp  ut_alib_monomem.cpp  ut_alib_monomem_monomem.cpp  ut_alib_monomem_stringtree.cpp  ut_alib_resources.cpp  ut_alib_strings.cpp  ut_alib_strings_astring.cpp  ut_alib_strings_format.cpp  ut_alib_strings_substring.cpp  ut_alib_strings_util.cpp  ut_alib_system.cpp  ut_alib_threads.cpp  ut_alib_time.cpp  ut_alib_util_stringtree.cpp  ut_bitbuffer_arraycompressor.cpp  ut_bitbuffer_bitbuffer.cpp  ut_boxing.cpp  ut_compatiblity_qt.cpp  ut_compatiblity_std.cpp  ut_config.cpp  ut_files.cpp  ut_lang.cpp  ut_resources.cpp  ut_system.cpp  (+3 more)
tools/: find_unmachted_pragma_push_pop.py
tools/DoxygenGraphTemplateInstanceRemover/: CMakeLists.txt  dgtir.cpp  dgtir2402.cpp  main.cpp  postfixes.cpp
tools/ResourceExport/: CMakeLists.txt  main.cpp  resourceexport.cpp
tools/Valgrind/: alib_alox.supp
(+943 files in other folders)
